--- a/style.css
+++ b/style.css
@@ -13,3 +13,15 @@
 .scale:active {
   scale: 1;
 }
+
+.form-control::-webkit-input-placeholder {
+  color: white;
+}
+
+.form-control:hover, .form-control:active, .form-control:focus{
+  box-shadow: none;
+}
+
+.bg-highlight {
+  background-color: rgba(255, 255, 0, 0.25);
+}
